# configurations

vagrant/focal64/: Vagrantfile
vagrant/ubuntu20/: Vagrantfile
vagrant/ubuntu20dev/: Vagrantfile
vagrant/ubuntudev/: Vagrantfile  playbook.yml
vagrant/ubuntudev2/: Vagrantfile
wolfy/: Dockerfile  Makefile  pyproject.toml
wolfy/wolfy/: main.py  wolfy.py
